[gd_scene load_steps=3 format=3 uid="uid://dowx2nq7aicx4"]

[ext_resource type="Script" path="res://types/building/building_shadow.gd" id="1_2quqi"]
[ext_resource type="Script" path="res://types/entity/entity_area_2d.gd" id="2_yewmt"]

[node name="Shadow" type="AnimatableBody2D" node_paths=PackedStringArray("collision_area", "shape_cast", "floors", "display_polygons", "display_sprite")]
sync_to_physics = false
script = ExtResource("1_2quqi")
collision_area = NodePath("CollisionArea")
shape_cast = NodePath("ShapeCast2D")
floors = NodePath("Floors")
display_polygons = NodePath("DisplayPolygons")
display_sprite = NodePath("Sprite2D")

[node name="Floors" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionArea" type="Area2D" parent="."]
visible = false
script = ExtResource("2_yewmt")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
visible = false
target_position = Vector2(0, 24)
metadata/_edit_lock_ = true

[node name="DisplayPolygons" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
metadata/_edit_lock_ = true

[connection signal="input_event" from="CollisionArea" to="." method="_on_collision_area_input_event"]
[connection signal="mouse_entered" from="CollisionArea" to="." method="_on_collision_area_mouse_entered"]
[connection signal="mouse_exited" from="CollisionArea" to="." method="_on_collision_area_mouse_exited"]
